stryker/Metadata/unpackaged/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Aplied_Ammount__c</fullName>
        <label>Aplied Ammount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Date__c</fullName>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Loan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emi__c</fullName>
        <label>Emi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installments__c</fullName>
        <label>Installments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>47</fullName>
                </value>
                <value>
                    <fullName>46</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Ammount__c</fullName>
        <label>Paid Ammount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sactioned_Amount__c</fullName>
        <label>Sactioned Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>balance_Amount__c</fullName>
        <label>balance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Aplied_Ammount__c</columns>
        <columns>Applied_Date__c</columns>
        <columns>Customer__c</columns>
        <columns>Due_date__c</columns>
        <columns>Sactioned_Amount__c</columns>
        <columns>Emi__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Aplied_Ammount__c</columns>
        <columns>Customer__c</columns>
        <columns>Due_date__c</columns>
        <columns>Applied_Date__c</columns>
        <columns>Emi__c</columns>
        <columns>Sactioned_Amount__c</columns>
        <columns>balance_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>